Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
                     </div>
                     <div class="header-divider"></div>
                     <div class="header-event-details">
-                        <h2 class="header-event-title">Interhouse Sports 2026</h2>
+                        <h2 class="header-event-title">Interhouse SportsMeet 2026</h2>
                         <p class="header-event-subtitle">Thakshila College Photographic Art Society</p>
                     </div>
                 </div>
@@ -1518,7 +1518,7 @@
         <!-- Footer -->
         <footer class="w-full px-6 py-8 text-center" style="animation: fadeUp .9s .75s ease both;">
             <div class="text-sm uppercase tracking-wider" style="color: rgba(130,148,168,.4);">
-                <p>© 2025 TCLive Sports · All Rights Reserved</p>
+                <p>© 2025 Thakshila College Photographic Art Society · All Rights Reserved</p>
                 <p class="mt-2">
                     <a href="#" class="hover:text-red-500 transition-colors">About</a> · 
                     <a href="#" class="hover:text-red-500 transition-colors ml-2">Schedule</a> · 
@@ -1916,65 +1916,35 @@
         // Example highlight images (replace with your actual images)
         const HIGHLIGHT_IMAGES = [
             {
-                url: 'https://images.unsplash.com/photo-1461896836934-ffe607ba8211?w=800',
-                title: '100m Sprint Finals',
-                description: 'Intense sprint competition'
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/627032525_1716712779446804_2516256839268636525_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=wBnB7h353skQ7kNvwGA5iPL&_nc_oc=AdkjT2D-lwN1579wpQ2VfRZIyL3EIzPPvWf9diZyIz95a2U5kbJvKaWWJYQI2rSmLv4&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=3xYlSkgaMWxOxJddBJ981A&oh=00_Afvkxw_z7CChZt5R_htR2IfbnQzdh9K0m0eXf-GDAGhqlA&oe=69975D9C',
+                title: 'Cricket Practices',
+                description: 'Interhouse Sportsmeet 2026 - Cricket Practices'
             },
             {
-                url: 'https://images.unsplash.com/photo-1552674605-db6ffd4facb5?w=800',
-                title: 'Relay Race',
-                description: 'Team relay handoff'
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/631672209_1721327285652020_8110295815648235499_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=24ruTARaz9IQ7kNvwFn--H8&_nc_oc=AdnsyJewaQ8Q5oXsfWSms2s2zlIwfKh0axAZG66WPGKe_NbclIoWJ6G4TJDx7fHaCpE&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=C-kzCBZ4dKffq75-fCv04w&oh=00_AfulrmpbVKugvEZDg4vnXVmdBOS5eCmdsoRYhcpz4Ymn4g&oe=699787AE',
+                title: 'Badminton Practices',
+                description: 'Interhouse Sportsmeet 2026 - Badminton Practices'
             },
             {
-                url: 'https://images.unsplash.com/photo-1517649763962-0c623066013b?w=800',
-                title: 'Long Jump',
-                description: 'Record-breaking jump'
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/631062232_1721327248985357_2269227185503996896_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=NBad_Km7pwIQ7kNvwGPHMjo&_nc_oc=AdmfWYDzTOCS57lm3OA8lNrrhtASIf6SapP8rDLLCanN01bB8W5VU5_Wx2CJ5TbtXhk&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=VSSD88y6yWIL3NAictchEA&oh=00_Aft72FLtNlTN7_mFT2R1fK552vcBkoaIun1Y3HUyKScGrg&oe=69975D8A',
+                title: 'Badminton Practices',
+                description: 'Interhouse Sportsmeet 2026 - Badminton Practices'
             },
             {
-                url: 'https://images.unsplash.com/photo-1587280501635-68a0e82cd5ff?w=800',
-                title: 'High Jump',
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/630797385_1721327038985378_1511517624028394388_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=GznuZ12BSd0Q7kNvwGnlB8x&_nc_oc=AdmF7zB6z-ufhvxWXlq7y1cqeKf6eYHklcdYrA7UZANAf3NTu1mSnBtPUWEGFdY1h1s&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=NZW6stXwqCmsD3qMhoCi7g&oh=00_Aftp43SfihfcwNzBFNMC50jvlaeWcnbiqkknXyWZvYS-tw&oe=69976420',
+                title: 'Sports Highlights',
                 description: 'Clearing the bar'
             },
             {
-                url: 'https://images.unsplash.com/photo-1560272564-c83b66b1ad12?w=800',
-                title: 'Basketball Finals',
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/631361658_1721326882318727_5399239222537332045_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PHZHV7MP9WMQ7kNvwGIzXON&_nc_oc=AdkzvcGBp6aEMZFp6M1gMi9sFyN2jxmaaWCnI-H36rIgGrBJqB0yZwfMrI-rLnINtAo&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=LmtxP-LBez-2vWmKUZvH0A&oh=00_Afsz38EIFZoRmvA-aaLAuC8UuxKfIHI0F-BLzJEKa4LyZA&oe=6997909C',
+                title: 'Sports Highlights',
                 description: 'Championship game'
             },
             {
-                url: 'https://images.unsplash.com/photo-1579952363873-27f3bade9f55?w=800',
+                url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/627085220_1716712542780161_3176124026784641118_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=-quaGnVOE04Q7kNvwHb7JcW&_nc_oc=AdloYXsYszIzUMdC_NSzVHCPr5aZSqBRH22ye_gNIq3--gDbxLDUzgbgkXkZNCWUTm8&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=y3Q8_tJrHvGNnM3dg48hcg&oh=00_AfvTf0UU5Pzry8fInLS4sTpWFfKyLk7w3oqRlL1TcYioRQ&oe=699786C5',
                 title: 'Volleyball Match',
                 description: 'Intense rally'
             },
-            {
-                url: 'https://images.unsplash.com/photo-1529900748604-07564a03e7a6?w=800',
-                title: 'Opening Ceremony',
-                description: 'Grand opening parade'
-            },
-            {
-                url: 'https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800',
-                title: 'Victory Celebration',
-                description: 'Champions crowned'
-            },
-            {
-                url: 'https://images.unsplash.com/photo-1574629810360-7efbbe195018?w=800',
-                title: 'Shot Put',
-                description: 'Power and technique'
-            },
-            {
-                url: 'https://images.unsplash.com/photo-1611328498808-c630ad48ded5?w=800',
-                title: '400m Hurdles',
-                description: 'Grace under pressure'
-            },
-            {
-                url: 'https://images.unsplash.com/photo-1551958219-acbc608c6377?w=800',
-                title: 'Team Spirit',
-                description: 'House camaraderie'
-            },
-            {
-                url: 'https://images.unsplash.com/photo-1627224234453-56c2f88fcc8c?w=800',
-                title: 'Medal Ceremony',
-                description: 'Podium moments'
-            }
         ];
 
         // Lightbox functionality
