--- a/index.html
+++ b/index.html
@@ -1933,17 +1933,17 @@
             {
                 url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/630797385_1721327038985378_1511517624028394388_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=GznuZ12BSd0Q7kNvwGnlB8x&_nc_oc=AdmF7zB6z-ufhvxWXlq7y1cqeKf6eYHklcdYrA7UZANAf3NTu1mSnBtPUWEGFdY1h1s&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=NZW6stXwqCmsD3qMhoCi7g&oh=00_Aftp43SfihfcwNzBFNMC50jvlaeWcnbiqkknXyWZvYS-tw&oe=69976420',
                 title: 'Sports Highlights',
-                description: 'Clearing the bar'
+                description: 'Interhouse Sportsmeet 2026 - Highlights'
             },
             {
                 url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/631361658_1721326882318727_5399239222537332045_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PHZHV7MP9WMQ7kNvwGIzXON&_nc_oc=AdkzvcGBp6aEMZFp6M1gMi9sFyN2jxmaaWCnI-H36rIgGrBJqB0yZwfMrI-rLnINtAo&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=LmtxP-LBez-2vWmKUZvH0A&oh=00_Afsz38EIFZoRmvA-aaLAuC8UuxKfIHI0F-BLzJEKa4LyZA&oe=6997909C',
                 title: 'Sports Highlights',
-                description: 'Championship game'
+                description: 'Interhouse Sportsmeet 2026 - Highlights'
             },
             {
                 url: 'https://scontent.fcmb1-2.fna.fbcdn.net/v/t39.30808-6/627085220_1716712542780161_3176124026784641118_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=-quaGnVOE04Q7kNvwHb7JcW&_nc_oc=AdloYXsYszIzUMdC_NSzVHCPr5aZSqBRH22ye_gNIq3--gDbxLDUzgbgkXkZNCWUTm8&_nc_zt=23&_nc_ht=scontent.fcmb1-2.fna&_nc_gid=y3Q8_tJrHvGNnM3dg48hcg&oh=00_AfvTf0UU5Pzry8fInLS4sTpWFfKyLk7w3oqRlL1TcYioRQ&oe=699786C5',
-                title: 'Volleyball Match',
-                description: 'Intense rally'
+                title: 'Sports Highlights',
+                description: 'Interhouse Sportsmeet 2026 - Highlights'
             },
         ];
 
@@ -2359,3 +2359,4 @@
     </script>
 </body>
 </html>
+
