--- a/index.html
+++ b/index.html
@@ -1866,7 +1866,7 @@
             <div class="max-w-7xl mx-auto flex items-center justify-between">
                 <div class="header-left">
                     <div class="logo-container">
-                        <img src="logo.png" alt="TCLive Sports Logo" class="logo-image">
+                        <img src="img/tc.png" alt="TCLive Sports Logo" class="logo-image">
                     </div>
                     <div class="header-divider"></div>
                     <div class="header-event-details">
@@ -3102,3 +3102,4 @@
     </script>
 </body>
 </html>
+
