--- a/index.html
+++ b/index.html
@@ -1901,7 +1901,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="scoreboard.html" class="nav-link" id="scoreboardNav">
+                        <a href="index2.html" class="nav-link" id="scoreboardNav">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/>
                                 <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"/>
@@ -3102,4 +3102,5 @@
     </script>
 </body>
 </html>
+
 
