--- a/index.html
+++ b/index.html
@@ -1937,7 +1937,7 @@
                         <div class="coming-soon-text">COMING SOON</div>
                         <div class="event-date">MARCH 12, 2026</div>
                         <p class="event-info">
-                            Get ready for an action-packed day of sports! Live streaming begins at 9:00 AM. 
+                            Get ready for an action-packed day of sports! Live streaming begins at 1:30 PM. 
                             Don't miss the opening ceremony and exciting competitions.
                         </p>
                         
@@ -2155,7 +2155,7 @@
         <!-- Footer -->
         <footer class="w-full px-6 py-8 text-center" style="animation: fadeUp .9s .75s ease both;">
             <div class="text-sm uppercase tracking-wider" style="color: rgba(130,148,168,.4);">
-                <p>© 2025 TCLive Sports · All Rights Reserved</p>
+                <p>© 2026 TCLive Sports · All Rights Reserved</p>
                 <p class="mt-2">
                     <a href="#" class="hover:text-red-500 transition-colors">About</a> · 
                     <a href="#" class="hover:text-red-500 transition-colors ml-2">Schedule</a> · 
@@ -3102,5 +3102,6 @@
     </script>
 </body>
 </html>
+
 
 
