--- a/index2.html
+++ b/index2.html
@@ -711,7 +711,7 @@
             <div class="nav-container">
                 <ul class="nav-links">
                     <li>
-                        <a href="index.html" class="nav-link">
+                        <a href="https://tclive-sportsmeet2026.vercel.app" class="nav-link">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
                                 <polyline points="9 22 9 12 15 12 15 22"/>
@@ -1011,3 +1011,4 @@
     </script>
 </body>
 </html>
+
